--- a/Adopt-me/package.json
+++ b/Adopt-me/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "prettier --write \"src/**/*.{js,jsx}\"" 
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Kerolos-Nesem/React/issues"
   },
-  "homepage": "https://github.com/Kerolos-Nesem/React#readme"
+  "homepage": "https://github.com/Kerolos-Nesem/React#readme",
+  "devDependencies": {
+    "prettier": "^2.6.2"
+  }
 }
